# a2a-webhook-security

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  README.md  SECURITY.md  SPEC.md  THREAT_MODEL.md  test-vectors.json
.github/workflows/: ci.yml  release.yml
reference/dotnet/: README.md  YawLabs.Awsp.sln
reference/dotnet/src/YawLabs.Awsp/: Awsp.cs  Headers.cs  IReplayStore.cs  InMemoryReplayStore.cs  SignParams.cs  SignedHeaders.cs  Ssrf.cs  VerifyParams.cs  VerifyResult.cs  YawLabs.Awsp.csproj
reference/dotnet/test/YawLabs.Awsp.Tests/: HeadersAdversarialTests.cs  HeadersTests.cs  SsrfTests.cs  VectorTests.cs  YawLabs.Awsp.Tests.csproj
reference/go/: LICENSE  README.md  awsp.go  awsp_test.go  go.mod  headers.go  headers_adversarial_test.go  headers_test.go  replay.go  ssrf.go  ssrf_test.go
reference/java/: README.md  pom.xml
reference/java/src/main/java/com/yawlabs/awsp/: Awsp.java  AwspException.java  Headers.java  InMemoryReplayStore.java  (+5 more)
reference/python/: README.md  pyproject.toml
reference/python/tests/: conftest.py  test_headers.py  test_headers_adversarial.py  test_ssrf.py  test_vectors.py
reference/python/yawlabs_awsp/: __init__.py  _headers.py  _replay.py  _signer.py  _ssrf.py
reference/typescript/: README.md  biome.json  package-lock.json  package.json
reference/typescript/scripts/: generate-vectors.mjs
reference/typescript/src/: headers.ts  index.ts  ssrf.ts  timing-safe-equal.ts
reference/typescript/test/: headers.adversarial.test.ts  headers.test.ts  index.test.ts  ssrf.test.ts
scripts/: conformance.ps1  conformance.sh
(+5 files in other folders)
